# legal-chatbot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: test-checkpoint.ipynb
configs/: training.yaml
docs/: configuration.md  index.md  training.md
src/: processing.py  redis_handler.py  settings.py  training.py  utils.py
tests/: test_utils.py
